--- a/aartics/m/css/aartics.css
+++ b/aartics/m/css/aartics.css
@@ -101,6 +101,7 @@ header {
 
 .child3 h1 {
   font-family: "ABeeZee", sans-serif;
+  text-rendering:optimizeLegibility;
   margin: 450px 0 0 0;
   color: white;
 }
