h1 -webkit-text-stroke css

--- a/aartics/m/css/aartics.css
+++ b/aartics/m/css/aartics.css
@@ -103,6 +103,7 @@ header {
   font-family: "ABeeZee", sans-serif;
   text-rendering:optimizeLegibility;
   -webkit-font-feature-settings: "kern" 1;
+  -webkit-text-stroke: 0.5px;
   margin: 450px 0 0 0;
   color: white;
 }
