link color update

--- a/aartics/projects/aartics_projects.css
+++ b/aartics/projects/aartics_projects.css
@@ -184,6 +184,16 @@
   color: #dadada;
 }
 
+.image-title p a {
+  text-decoration: none;
+  color: #89ff01;
+}
+
+.image-title p a: hover {
+  text-decoration: none;
+  color: #00BCD4;
+}
+
 .image-title ul {
   list-style: none;
   text-align: left;
