--- a/aartics/css/aartics.css
+++ b/aartics/css/aartics.css
@@ -22,30 +22,12 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
 
-
-body {
-  width: 3500px;
-  overflow-y: hidden;
-  padding: 0;
-  margin: 0;
-  font-family: 'Raleway', sans-serif;
-  font-size: 20px;
-/*   background-color: #22313f; */
-
-}
+/* All things header ---START--- */
 
 header {
   position: fixed;
   right: 0;
   z-index: 30;
-}
-
-.child1 text {
-  cursor:default;
-}
-
-.child1 text a{
-  cursor:pointer;
 }
 
 .aarticslogo {
@@ -55,87 +37,6 @@ header {
   z-index: 25;
 }
 
-.parent {
-  position: relative;
-  width: 3700px;
-  height: 760px;
-}
-
-.child1 {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 0;
-/*   opacity: 0.0; */
-}
-
-.child2 {
-  width: 1050px;
-  height: 760px;
-  position: absolute;
-  top: 15px;
-  left: 0;
-  z-index: 2;
-  pointer-events: none;
-}
-
-.child3 {
-  width: 1000px;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 4;
-/*   background-color: red; */
-/*   background-image: url("../img/cover.png"); */
-}
-
-.child4 {
-  width: 900px;
-  height: 100%;
-  position: absolute;
-  z-index: 5;
-  margin-top: 160px;
-}
-
-
-.child3 h1 {
-  font-family: "ABeeZee";
-  margin: 200px 0 0 50px;
-  color: black;
-}
-
-.child3 p{
-  color: #000000;
-  margin: 60px 200px 0 50px;
-}
-
-.cls-1 {
-  fill: #ffffff;
-  fill-opacity: .8;
-  stroke: #000000;
-}
-
-.cls-2 {
-  fill: rgba(255, 255, 255, 0.89);
-  stroke-width: 1px;
-  stroke: #000000;
-
-}
-
-/* header button {
-  border: none;
-  background-color: #ffffff;
-  font-size: 12px;
-  color: black;
-  cursor: pointer;
-  width: 95px;
-  font-family: 'Raleway';
-} */
-
-/* button:focus {outline:0;} */
 
 #ul_top_hypers li {
   display: inline-block;
@@ -177,7 +78,7 @@ header {
 .dropdown-content a {
     color: black;
     font-size: 12px;
-    padding: 12px 16px;
+    padding: 5px 5px 5px 5px;
     text-decoration: none;
     display: block;
 }
@@ -192,13 +93,10 @@ header {
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-    background-color: rgb(210, 210, 210);
+/*     background-color: rgb(210, 210, 210); */
 }
 
 
-
-
-/* 
 #area2:hover {
   color: aqua;
   border-bottom: 2px solid aqua;
@@ -220,10 +118,101 @@ header {
 }
 
 #area6:hover {
-  color: white;
-  border-bottom: 2px solid white;
+  color: black;
+  border-bottom: 2px solid black;
 }
- */
+
+/* All things header ---END--- */
+
+.child3 {
+  width: 1000px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 4;
+/*   background-color: red; */
+/*   background-image: url("../img/cover.png"); */
+}
+
+.child3 h1 {
+  font-family: "ABeeZee";
+  margin: 200px 0 0 50px;
+  color: black;
+}
+
+.child3 p{
+  color: #000000;
+  margin: 60px 200px 0 50px;
+}
+
+
+body {
+  width: 3500px;
+  overflow-y: hidden;
+  padding: 0;
+  margin: 0;
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
+/*   background-color: #22313f; */
+
+}
+
+.child1 text {
+  cursor:default;
+}
+
+.child1 text a{
+  cursor:pointer;
+}
+
+.parent {
+  position: relative;
+  width: 3700px;
+  height: 760px;
+}
+
+.child1 {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+/*   opacity: 0.0; */
+}
+
+.child2 {
+  width: 1050px;
+  height: 760px;
+  position: absolute;
+  top: 15px;
+  left: 0;
+  z-index: 2;
+  pointer-events: none;
+}
+
+.child4 {
+  width: 900px;
+  height: 100%;
+  position: absolute;
+  z-index: 5;
+  margin-top: 160px;
+}
+
+
+.cls-1 {
+  fill: #ffffff;
+  fill-opacity: .8;
+  stroke: #000000;
+}
+
+.cls-2 {
+  fill: rgba(255, 255, 255, 0.89);
+  stroke-width: 1px;
+  stroke: #000000;
+
+}
 
 raleway {
   font-family: 'Raleway', sans-serif;
