--- a/aartics/css/aartics.css
+++ b/aartics/css/aartics.css
@@ -32,9 +32,13 @@ header {
 
 .aarticslogo {
   position: fixed;
-  left: 50px;
-  top: 10px;
-  z-index: 25;
+  left: 9px;
+  top: 0px;
+}
+
+.aarticslogobtn img {
+  padding: 3px 0 0 9px;
+  margin: 0 0 0 0;
 }
 
 
@@ -154,8 +158,7 @@ body {
   margin: 0;
   font-family: 'Raleway', sans-serif;
   font-size: 20px;
-/*   background-color: #22313f; */
-
+  /*   background-color: #22313f; */
 }
 
 .child1 text {
