--- a/aartics/projects/assets_v4/css/aartics_projects_v4.css
+++ b/aartics/projects/assets_v4/css/aartics_projects_v4.css
@@ -22,6 +22,10 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
 
+html, body {
+    text-rendering: geometricPrecision;
+}
+
 /* All things header ---START--- */
 
 
@@ -68,6 +72,11 @@ header {
   #ul_top_hypers {
     visibility: hidden;
   }
+
+  .aarticslogobtn img {
+    height: 18px;
+  }
+
 }
 
 /* Dropdown Button */
