text render tweak

--- a/aartics/projects/assets_v4/css/aartics_projects_v4.css
+++ b/aartics/projects/assets_v4/css/aartics_projects_v4.css
@@ -23,7 +23,7 @@
 }
 
 html, body {
-    text-rendering: geometricPrecision;
+    text-rendering:optimizeLegibility;
 }
 
 /* All things header ---START--- */
