--- a/aartics/css/aartics.css
+++ b/aartics/css/aartics.css
@@ -22,6 +22,17 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
 
+
+body {
+  width: 3500px;
+  overflow-y: hidden;
+  padding: 0;
+  margin: 0;
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
+  /*   background-color: #22313f; */
+}
+
 /* All things header ---START--- */
 
 header {
@@ -129,36 +140,34 @@ header {
 /* All things header ---END--- */
 
 .child3 {
-  width: 1000px;
+  width: 1200px;
   height: 100%;
   position: absolute;
   top: 0;
   left: 0;
   z-index: 4;
-  /*text-align: center;*/
+  text-align: center;
 /*    background-color: red; */
 /*    background-image: url("../img/cover.png"); */
 }
 
+#intro-logo {
+  height: 80px;
+  margin-top: 140px;
+  margin-right: 550px;
+/*   opacity: 0.3; */
+}
+
 .child3 h1 {
   font-family: "ABeeZee";
-  margin: 200px 0 0 60px;
+  margin: 20px 550px 0 60px;
+  font-size: 30pt;
   color: black;
 }
 
 .child3 p{
   color: #000000;
-  margin: 60px 0 0 60px;
-}
-
-body {
-  width: 3500px;
-  overflow-y: hidden;
-  padding: 0;
-  margin: 0;
-  font-family: 'Raleway', sans-serif;
-  font-size: 20px;
-  /*   background-color: #22313f; */
+  margin: 40px 550px 0 60px;
 }
 
 .child1 text {
@@ -460,9 +469,9 @@ raleway {
 }
 
 .logoc img{
-  width: 32px;
+  width: 35px;
   margin-top: 0;
-  padding: 40px 0 0 18px;
+  padding: 40px 10px 0 18px;
 /*   filter: sepia() saturate(10000%) hue-rotate(30deg); this turns png green */
 }
 
@@ -471,7 +480,7 @@ raleway {
 }
 
 .logowrapper {
-  margin: 0 0 0 29px;
+  margin: 0 600px 0 29px;
 }
 
 .nibbler {
